# mathsmerise

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: mathsmeriseCompilerOptions.cmake  mmHeaderOnlyLibrary.cmake
graph/: CMakeLists.txt
graph/include/: graph.hpp
test/: CMakeLists.txt
test/include/: graph_test.hpp
test/src/: graph_test.cpp  main_test.cpp
